cmake_minimum_required(VERSION 3.20)
project(course_3)

set(CMAKE_CXX_STANDARD 17)

add_subdirectory(assignment_1)
add_subdirectory(HW2)
add_subdirectory(HW3)
add_subdirectory(HW4)
add_subdirectory(HW5)
add_subdirectory(HW6)
add_subdirectory(Pro1)
add_subdirectory(Pro2)



add_executable(course_3 main.cpp)
